<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="weather">天气</string>
    <string name="live">实景</string>
    <string name="around">周边</string>
    <string name="me">我</string>
    <string name="defultcity">北京</string>
    <string name="tsing">清华大学</string>
    <string name="twohour">2小时前发布</string>
    <string name="defult">晴</string>
    <string name="_25">30°</string>
    <string name="_14_22">14~22°</string>
    <string name="defaultlisttype">阴转多云</string>
    <string name="defaultlistday">周四</string>
    <string name="realtime">实时</string>
    <string name="hotpoint">热点</string>
    <string name="share">分享</string>
    <string name="multiday">多天预报</string>
    <string name="trend">趋势</string>
    <string name="list">列表</string>
    <string name="theme">天气主题</string>
</resources>
